<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp">

    <ImageView
        android:id="@+id/listitem_movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_poster"
        android:maxWidth="142dp"
        android:src="@drawable/stub"/>

    <TextView
        android:id="@+id/listitem_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stub_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <RatingBar
            android:id="@+id/listitem_movie_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_rating"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            android:rating="3.1"
            android:stepSize="0.1"/>

        <TextView
            android:id="@+id/listitem_movie_extra"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/stub_extra"/>
    </LinearLayout>

    <TextView
        android:id="@+id/listitem_movie_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stub_display"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</LinearLayout>