<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listitem_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:transitionName="movieName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <RatingBar
                android:id="@+id/listitem_movie_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_rating"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:progressDrawable="@drawable/ratingbar_yellow"
                android:rating="3"
                android:stepSize="0.5"/>

            <TextView
                android:id="@+id/listitem_movie_extra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.00"
                android:gravity="right"
                android:text="@string/stub_extra"/>
        </LinearLayout>

        <TextView
            android:id="@+id/listitem_movie_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_display"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/listitem_movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_poster"
        android:src="@drawable/stub"
        android:transitionName="moviePoster"/>

</LinearLayout>