<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="16dp">

        <TextView
            android:id="@+id/listitem_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:transitionName="movieName"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/listitem_movie_poster"
            android:layout_toStartOf="@+id/listitem_movie_poster"
            android:layout_alignParentStart="true" />


            <RatingBar
                android:id="@+id/listitem_movie_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_rating"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:rating="3"
                android:stepSize="0.5"
                android:layout_below="@+id/listitem_movie_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/listitem_movie_extra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/stub_extra"
                android:layout_below="@+id/listitem_movie_title"
                android:layout_toLeftOf="@+id/listitem_movie_rating"
                android:layout_alignRight="@+id/listitem_movie_title"
                android:layout_alignEnd="@+id/listitem_movie_title"
                android:layout_toRightOf="@+id/listitem_movie_rating"
                android:layout_toEndOf="@+id/listitem_movie_rating"
                android:layout_toStartOf="@+id/listitem_movie_rating" />

        <TextView
            android:id="@+id/listitem_movie_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_display"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/listitem_movie_rating"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="8dp"
            android:layout_toLeftOf="@+id/listitem_movie_poster"
            android:layout_toStartOf="@+id/listitem_movie_poster"/>

    <ImageView
        android:id="@+id/listitem_movie_poster"
        android:layout_width="@dimen/poster_size_full"
        android:layout_height="@dimen/poster_size_height_list"
        android:contentDescription="@string/content_description_poster"
        android:src="@drawable/stub"
        android:transitionName="moviePoster"
        android:layout_marginLeft="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>